tests/fixtures/invalid/bytes_floordiv_bool.py
# Cannot floor divide Bytes and Bool
x: bytes = b"hello" // True
